--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "leanixReport": {
     "id": "net.leanix.pmrs.customDataQualityReport",
-    "title": "Custom Data Quality Report",
+    "title": "Intermediate Project",
     "defaultConfig": {}
   },
   "scripts": {
@@ -19,7 +19,7 @@
     "leanix",
     "custom-report"
   ],
-  "author": "Paulo dos Santos",
+  "author": "PBernhard Landsberg",
   "private": true,
   "license": "UNLICENSED",
   "devDependencies": {
