--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "babel-preset-env": "1.5.2",
     "copy-webpack-plugin": "4.0.1",
     "css-loader": "^0.28.4",
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "0.11.2",
     "fstream": "1.0.11",
